--- a/pages/infodados/infodados_phone.css
+++ b/pages/infodados/infodados_phone.css
@@ -27,7 +27,7 @@
 			}
 
 			tr {
-				margin-bottom: 0.7vw;
+				margin-bottom: 5vw;
 				padding: 0.5vw;
 				border-radius: 0.6vw;
 			}
